--- a/css/main.css
+++ b/css/main.css
@@ -487,11 +487,34 @@ nav ul a{
 }
 
 
+
+
 @media (max-width:500px) {
 	img{
 		width: 100px;
 		height: 100px;
 	}
+	
+
+	h1#logo {
+		width: 116px; height: 58px;
+		background-size:100% 100%;
+		margin-bottom: 5px;
+	}
+
+	h1#logo a {
+		width: 116px; height: 58px;
+	}
+
+	.timeslot time{
+		font-size: 19px;
+
+	}
+	
+	
+
+
+
 }
 
 @media (min-width:750px) {
@@ -567,6 +590,30 @@ nav ul a{
 
 	.timeslot time div{
 		display: block;
+	}
+
+	.sessionpage section{
+		display: block;
+		width: 715px;
+		margin-left: 4px;
+	}
+
+	.sessionpage article{
+		display: block;
+		width: auto;
+		padding: 10px 10px 10px 15px;
+	}
+
+	.sessionpage .timeslot time{
+		display: block;
+		width: auto;
+		text-align: left;
+		padding: 10px 10px 10px 15px;
+		margin-bottom: 10px;
+	}
+
+	.sessionpage .timeslot time div{
+		display: inline;
 	}
 
 
